--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,53 +1,53 @@
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Thin.ttf);
     font-weight: 100;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-ExtraLight.ttf);
     font-weight: 200;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Light.ttf);
     font-weight: 300;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Regular.ttf);
     font-weight: 400;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Medium.ttf);
     font-weight: 500;
 }
 
 @font-face {
-    font-family: 'Inter Display';
-    src: url(../assets/fonts/InterDisplay-Semibold.ttf);
+    font-family: "Inter Display";
+    src: url(../assets/fonts/InterDisplay-SemiBold.ttf);
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Bold.ttf);
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-ExtraBold.ttf);
     font-weight: 800;
 }
 
 @font-face {
-    font-family: 'Inter Display';
+    font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Black.ttf);
     font-weight: 900;
 }
