--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,70 @@
-header, section, footer {
+main {
+    margin-top: 64px;
+    position: relative;
+    
+    @media (min-width: 768px) {
+        &::before {
+            height: 100vh;
+            width: 0;
+            border-left: 1px dashed var(--dashed-border-color);
+            content: "";
+            left: calc(50vw - 600px);
+            top: -64px;
+            position: absolute;
+        }
+
+        &::after {
+            height: 100vh;
+            width: 0;
+            border-left: 1px dashed var(--dashed-border-color);
+            content: "";
+            right: calc(50vw - 600px);
+            top: -64px;
+            position: absolute;
+        }
+    }
+}
+
+section {
     max-width: 1200px;
     margin: auto;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    border: 1px dashed #454545;
+    padding: 0 32px;
+
+    &.hero {
+        height: auto;
+        padding-top: 64px;
+        padding-bottom: 64px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 32px;        
+
+        @media (min-width: 768px) {
+            height: 512px;
+            gap: 44px;
+        }
+
+        h1 {
+            text-align: center;
+            text-wrap: pretty;
+            
+            @media (min-width: 768px) {
+                max-width: 756px;
+            }
+        }
+        
+        .button-and-social-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 32px;
+
+            .social-links {
+                display: flex;
+                gap: 8px;
+            }
+        }
+    }
 }
