--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,7 @@ header {
     top: 0;
     width: 100%;
     background: var(--bg-color);
+    z-index: 1;
 
     @media (min-width: 768px) {
         padding: 0 calc(50vw - 584px);
@@ -63,7 +64,7 @@ header {
 .mobile-nav {
     transform: translateX(100vw);
     width: 100%;
-    height: calc(100dvh - 128px);
+    height: calc(100dvh - 64px);
     background: var(--bg-color);
     position: fixed;
     top: 64px;
@@ -118,7 +119,7 @@ header {
         width: 100%;
         height: 0;
         position: fixed;
-        bottom: 0;
+        bottom: 64px;
         border-bottom: 1px dashed var(--dashed-border-color);
     }
 
