--- a/css/typography.css
+++ b/css/typography.css
@@ -14,7 +14,8 @@ h1,.h1 {
 }
 
 h2,.h2 {
-
+    font-size: 16px;
+    font-weight: 600;
 }
 
 h3,.h3 {
@@ -36,6 +37,11 @@ h6,.h6 {
 /* body text */
 p {
 
+    &.portfolio-item-date-text {
+        font-size: 11px;
+        font-weight: 600;
+        color: var(--text-accent);
+    }
 }
 
 span {
