changed the way portfolio items are rendered

--- a/css/layout.css
+++ b/css/layout.css
@@ -104,6 +104,13 @@ section {
                 height: 12rem;
                 background: var(--btn-primary);
                 border-radius: 16px;
+                overflow: hidden;
+
+                video {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
                 
             }
 
