--- a/css/layout.css
+++ b/css/layout.css
@@ -105,8 +105,9 @@ section {
                 background: var(--btn-primary);
                 border-radius: 16px;
                 overflow: hidden;
+                border: 1px solid #202020;
 
-                video {
+                img, video {
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
