--- a/css/buttons.css
+++ b/css/buttons.css
@@ -4,6 +4,7 @@
     font-weight: 600;
     padding: 12px 12px;
     border-radius: 12px;
+    cursor: pointer;
 
     @media (min-width: 768px) {
         font-size: 16px;
@@ -18,6 +19,11 @@
     &.no-bg {
         background: transparent;
     }
+
+    &.small {
+        padding: 12px 16px;
+        font-size: 14px;
+    }
 }
 
 .social-btn {
@@ -26,4 +32,12 @@
     width: 32px;
     border: 1px solid var(--dashed-border-color);
     border-radius: 8px;
+}
+
+.contact-btn-desktop {
+    display: none;
+
+    @media (min-width: 768px) {
+        display: block;
+    }
 }
