--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,7 @@ main {
             width: 0;
             border-left: 1px dashed var(--dashed-border-color);
             content: "";
-            left: calc(50vw - 600px);
+            left: calc(50vw - 700px);
             top: -64px;
             position: fixed;
         }
@@ -18,7 +18,7 @@ main {
             width: 0;
             border-left: 1px dashed var(--dashed-border-color);
             content: "";
-            right: calc(50vw - 600px);
+            right: calc(50vw - 700px);
             top: -64px;
             position: fixed;
         }
@@ -26,7 +26,7 @@ main {
 }
 
 section {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: auto;
     padding: 0 32px;
 
@@ -41,7 +41,7 @@ section {
         gap: 32px;        
 
         @media (min-width: 768px) {
-            height: 512px;
+            height: 486px;
             gap: 44px;
         }
 
@@ -78,6 +78,7 @@ section {
 
         @media (min-width: 768px) {
             flex-direction: row;
+            padding-bottom: 128px;
         }
 
         .portfolio-column {
@@ -101,15 +102,11 @@ section {
             
             .portfolio-item-image-container {
                 width: 100%;
-                height: 12rem;
+                height: 250px;
                 background: var(--btn-primary);
                 border-radius: 16px;
                 overflow: hidden;
-                /* border: 1px solid #202020; */
-
-                &.suniai-oliva {
-                    background-color: #F3EFEB;
-                }
+                border: 1px solid #202020;
 
                 img, video {
                     height: 100%;
@@ -122,6 +119,29 @@ section {
                 display: flex;
                 justify-content: space-between;
                 padding: 0 8px;
+            }
+
+            &.wewoosh {
+                .portfolio-item-image-container {
+                    height: 300px;
+
+                    img {
+                        object-position: bottom left;
+                    }
+                }
+            }
+
+            &.suniai-oliva {
+                .portfolio-item-image-container {
+                    height: 422px;
+                    background-color: #F3EFEB;
+                }
+            }
+
+            &.yet_another_todo_list {
+                .portfolio-item-image-container {
+                    height: 282px;
+                }
             }
         }
     }
