--- a/css/animations.css
+++ b/css/animations.css
@@ -7,3 +7,13 @@
         height: 100dvh;
     }
 }
+
+@keyframes blur {
+    from {
+        backdrop-filter: blur(16px);
+    }
+    
+    to {
+        backdrop-filter: blur(0px);
+    }
+}
