--- a/css/main.css
+++ b/css/main.css
@@ -28,16 +28,36 @@
     }
 } */
 
+html {
+    background: var(--bg-color);
+}
+
 body {
     font-family: "Inter Display";
     margin: 0;
     padding: 0;
     background-color: #0a0a0a;
     color: white;
+    position: relative;
+    /* animation: blur 0.675s ease-in-out; */
 
     &::-webkit-scrollbar {
         display: none;
     }
+
+    /* &::before {
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 5;
+        background: rgba(10, 10, 10, 0.01);
+        content: "";
+        animation: blur 0.675s ease-in-out forwards;
+        backdrop-filter: blur(16px);
+        pointer-events: none;
+    } */
 }
 
 .mobile-nav-open {
