--- a/css/header.css
+++ b/css/header.css
@@ -8,10 +8,12 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background: #0a0a0ae8;
-    backdrop-filter: blur(64px);
+    /* background: #0a0a0ae8; */
+    background-color: var(--bg-color);
+    /* backdrop-filter: blur(64px); */
     z-index: 2;
     transition: transform 0.2s ease;
+    view-transition-name: header;
 
     .container {
         display: flex;
