--- a/css/ea-grid.css
+++ b/css/ea-grid.css
@@ -1,5 +1,5 @@
 /*
-    emils fett coola grid system™
+    emils fett coola grid system™ 2022
         12 kolumner för närvarande, skulle kunna utökas med scss och göra kolumnantal till variabel
         och sedan ha for-loopar som genererar klasserna under sett till antal kolumner
     
