--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,3 +1,5 @@
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css');
+
 @font-face {
     font-family: "Inter Display";
     src: url(../assets/fonts/InterDisplay-Thin.ttf);
