--- a/css/footer.css
+++ b/css/footer.css
@@ -7,10 +7,11 @@ footer {
     position: relative;
     z-index: 1;
     background-color: var(--bg-color);
-    border-top: 0.0625rem dashed var(--dashed-border-color);
+    border-top: 1px dashed var(--dashed-border-color);
 
     p {
         font-size: 14px;
         font-weight: 600;
+        color: white;
     }
 }
