--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,31 @@
 main {
     margin-top: 64px;
     position: relative;
+
+    &::before {
+        height: calc(100vh + 64px);
+        width: 0;
+        border-left: 1px dashed var(--dashed-border-color);
+        content: "";
+        left: 15px;
+        top: -64px;
+        position: fixed;
+        view-transition-name: main-left-line;
+    }
+
+    &::after {
+        height: calc(100vh + 64px);
+        width: 0;
+        border-left: 1px dashed var(--dashed-border-color);
+        content: "";
+        right: 15px;
+        top: -64px;
+        position: fixed;
+        view-transition-name: main-right-line;
+    }
     
     @media (min-width: 768px) {
+    
         &::before {
             height: calc(100vh + 64px);
             width: 0;
@@ -24,10 +47,233 @@ main {
             position: fixed;
             view-transition-name: main-right-line;
         }
+   
+    }
+
+    &.intro {
+        section {
+            &.hero {
+                h1 {
+                    font-size: 24px;
+                }
+                @media (min-width: 768px) {
+                    h1 {
+                        font-size: 28px;
+                    }
+                }
+            }
+        }
+    }
+
+    &.about {
+        section {
+            &.hero {
+                height: 128px;
+                
+                @media (min-width: 768px) {
+                    height: 256px;
+                }
+                position: relative;
+            }
+
+            &.about {
+                /* padding-top: 2rem;
+                padding-bottom: 2rem; */
+                padding-top: 2rem;
+                padding-bottom: 8rem;
+
+                @media (min-width: 768px) {
+                    padding-top: 8rem;
+                }
+
+                .about-title {
+                    margin-bottom: 2rem;
+                }
+
+                .text-container {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1.5rem;
+                }
+
+                .image-container {
+                    margin-top: 2rem;
+                    
+                    @media (min-width: 768px) {
+                        margin-top: 6rem;
+                    }
+                    
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 1rem;
+                    }
+                }
+            }
+
+            &.cv {
+                row-gap: 2rem;
+                padding-bottom: 4rem;
+                
+                @media (min-width: 768px) {
+                    column-gap: 2rem;
+                    padding-bottom: 6rem;
+                } 
+
+                .header {
+                    border-top: 1px dashed var(--dashed-border-color);
+                    padding-top: 12px;
+                    font-size: 12px;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                }
+
+                .cv-card {
+                    padding: 24px;
+                    background-color: #0d0d0d;
+                    display: flex;
+                    flex-direction: column;
+                    border-radius: 1rem;
+
+                    .info-container {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        margin-bottom: 0.5rem;
+                    }
+
+                    h3 {
+                        margin-bottom: 2rem;
+                    }
+                    
+                    .pill {
+                        font-size: 10.9px;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                        background-color: #1B1B1B;
+                        padding: 7px 12px;
+                        border-radius: 2rem;
+                    }
+
+                    .year {
+                        font-size: 12px;
+                        font-weight: 600;
+                        opacity: 0.5;
+                        margin-bottom: auto;
+                    }
+                }
+
+                &#experiences {
+                    padding-bottom: 8rem;
+                }
+            }
+        }
+        
     }
 
     &.contact {
-        height: calc(100vh - 128px);
+
+        @media (min-width: 768px) {
+            height: calc(100vh - 128px);
+        }
+
+        section {
+            &.hero {
+                height: 128px;
+
+                @media (min-width: 768px) {
+                    height: 256px;
+                }
+            }
+
+            &.contact {
+                padding-top: 4rem;
+                
+                .hire-me {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 4rem;
+
+                    .text-container {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+                    }
+
+                    .hire-me-btn {
+                        display: flex;
+                        justify-content: space-between;
+                        transition: all 0.5s ease;
+                        align-items: center;
+                        border-radius: 1rem;
+                        cursor: pointer;
+
+
+                        .btn-text-container {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 0.5rem;
+                        }
+                        
+                        &:hover {
+                            h6, i {
+                                /* color: black; */
+                            }
+                            padding: 1rem;
+                            background-color: rgb(24, 24, 24);
+                        }
+                    }
+                }
+
+                .channels {
+                    padding-top: 8rem;
+                    padding-bottom: 8rem;
+                    
+                    @media (min-width: 768px) {
+                        padding: 0;
+                    }
+                    .channel-container {
+                        margin-top: 2rem;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1.5rem;
+                        
+                        
+                        .channel {
+                            border-radius: 1rem;
+                            transition: all 0.25s ease;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+                            .arrow {
+                                opacity: 1;
+                            }
+
+                            i {
+                                margin-right: 0.5rem;
+                            }
+
+                            @media (min-width: 768px) {
+                                .arrow {
+                                    opacity: 0;
+                                }
+
+                                &:hover {
+                                    .arrow {
+                                        opacity: 1;
+                                    }
+                                    
+                                    padding: 1rem;
+                                    background-color: rgb(24, 24, 24);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -38,13 +284,26 @@ section {
 
     &.hero {
         height: auto;
-        padding-top: 40px;
-        padding-bottom: 40px;
+        padding-top: 64px;
+        padding-bottom: 64px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 32px;        
+        gap: 32px;
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: "";
+            width: 0;
+            border-bottom: 1px dashed var(--dashed-border-color);
+            bottom: 0;
+            width: 100vw;
+        }
+        
+        /* border-bottom: 1px dashed var(--dashed-border-color); */
+
 
         @media (min-width: 768px) {
             height: 486px;
@@ -78,7 +337,7 @@ section {
         display: flex;
         flex-direction: column;
         gap: 32px;
-        border-top: 1px dashed var(--dashed-border-color);
+        /* border-top: 1px dashed var(--dashed-border-color); */
         padding-top: 32px;
         padding-bottom: 32px;
 
@@ -105,7 +364,7 @@ section {
             display: flex;
             flex-direction: column;
             gap: 12px;
-            
+
             .portfolio-item-image-container {
                 width: 100%;
                 height: 250px;
@@ -118,6 +377,9 @@ section {
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
+                    transition: transform 0.35s ease;
+                    transform-origin: center center;
+
                 }   
             }
 
@@ -147,6 +409,14 @@ section {
             &.yet_another_todo_list {
                 .portfolio-item-image-container {
                     height: 282px;
+                }
+            }
+
+            &:hover {
+                .portfolio-item-image-container {
+                    img, video {
+                        transform: scale(1.1);
+                    }
                 }
             }
         }
