--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 @import './utilities.css';
 
 /* secret rem scaling tech */
-/* html {
+html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 16px;
@@ -26,7 +26,7 @@
     @media (max-width: 600px) {
         font-size: 16px;
     }
-} */
+}
 
 @view-transition {
     navigation: auto;
@@ -44,13 +44,13 @@
 
   100% {
     opacity: 0;
-    transform: translateY(50%);
+    transform: translateY(15%);
   }
 }
 
 @keyframes move-in {
     0% {
-        transform: translateY(50%);
+        transform: translateY(15%);
         opacity: 0;
       }
     
@@ -64,17 +64,18 @@
       }
 }
 
-/* Apply the custom animation to the old and new page states */
 ::view-transition-old(root) {
-  animation: 1s ease-in-out both move-out;
+  animation: 0.75s ease both move-out;
 }
 
 ::view-transition-new(root) {
-  animation: 1s ease-in-out both move-in;
+  animation: 0.75s ease both move-in;
 }
 
 html {
     background: var(--bg-color);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
