--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,16 +1,16 @@
 .ea-btn {
     all: unset;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 600;
-    padding: 12px 12px;
-    border-radius: 12px;
+    padding: 0.75rem 0.75rem;
+    border-radius: 0.75rem;
     cursor: pointer;
     width: fit-content;
 
     @media (min-width: 768px) {
-        font-size: 16px;
-        border-radius: 16px;
-        padding: 12px 16px;
+        font-size: 1rem;
+        border-radius: 1rem;
+        padding: 0.75rem 1rem;
     }
 
     &.primary {
@@ -28,18 +28,18 @@
     }
 
     &.small {
-        padding: 12px 16px;
-        font-size: 14px;
+        padding: 0.75rem 1rem;
+        font-size: 0.875rem;
     }
 }
 
 .social-btn {
     display: block;
-    height: 36px;
-    width: 36px;
+    height: 2.25rem;
+    width: 2.25rem;
     border: 1px solid var(--dashed-border-color);
-    border-radius: 12px;
-    font-size: 20px;
+    border-radius: 0.75rem;
+    font-size: 1.25rem;
     display: grid;
     place-items: center;
     cursor: pointer;
